fix copy link button dark mode style

--- a/web/static/css/random.css
+++ b/web/static/css/random.css
@@ -29,8 +29,13 @@
 
 #link {
     border: 2px dashed black;
-    background: white ;
+    background: transparent;
     border-radius: 6px;
+}
+
+.dark #link {
+    border: 2px dashed white;
+    color:white;
 }
 
 #trash {
